--- a/views/page/home.ejs
+++ b/views/page/home.ejs
@@ -2,7 +2,7 @@
 
 <div id="sidebar">
 	<h1>TRACK YOUR PROGRESS</h1>
-	<p>PowerUp helps you achieve your goals by giving you simple, visual tools to track each step along the way.</p>
+	<p>PowerUp is a personal analytics tool that helps you turn your projects and goals into stories.</p>
 	
 	<p class="freebies">The next
 	<% for(var i=0;i<freebies.length;i++){ %>
