--- a/views/grid/edit.ejs
+++ b/views/grid/edit.ejs
@@ -72,7 +72,7 @@
   		      <input type="text" name="grid[dataTypes][<%- i %>][name]"
   		        value="<%- dataType.name %>" class="med" />
   		      
-      			<select name="grid[dataTypes][0][dataType]" class="small">
+      			<select name="grid[dataTypes][<%- i %>][dataType]" class="small">
       			  <% var types = ['number', 'text']; %>
       			  <% for (var j = 0; j < types.length; j++) { %>
       			    <option value="<%- types[j] %>"
