--- a/views/grid/show.ejs
+++ b/views/grid/show.ejs
@@ -49,7 +49,7 @@
 	<div class="sections">
 		<div class="section progress">
 			<div id="progress_section" class="s1">
-				<div class="nav" style="display:none">
+				<div class="nav" style="display:none;">
 					<button class="s1">OVERALL</button>
 					<button class="s2">MOOD</button>
 					<button class="s3">WEIGHT</button>
@@ -196,32 +196,6 @@
 
 <% include ../partials/footer.ejs %>
 
-<style>
-
-body {
-  font: 10px sans-serif;
-}
-
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #fff;
-	color:#fff;
-  shape-rendering: crispEdges;
-}
-
-.x.axis path {
-  display: none;
-}
-
-.line {
-  fill: none;
-  stroke: #68dcaa;
-  stroke-width: 3px;
-}
-
-</style>
-
 <script type="text/javascript" src="/js/grid.js"></script>
 <script type="text/javascript" src="/js/powerup.js"></script>
 <script type="text/javascript">
@@ -247,69 +221,4 @@ body {
          JSON.parse('<%- JSON.stringify(currentUser) %>'));
     <% } %>
   });
-  
-	var margin = {top: 60, right: 20, bottom: 30, left: 50},
-	    width = 700 - margin.left - margin.right,
-	    height = 300 - margin.top - margin.bottom;
-
-	var parseDate = d3.time.format("%d-%b-%y").parse;
-
-	var x = d3.time.scale()
-		.range([0, width]);
-
-	var y = d3.scale.linear()
-		.range([height, 0]);
-
-	var xAxis = d3.svg.axis()
-		.scale(x)
-		.orient("bottom");
-
-	var yAxis = d3.svg.axis()
-		.scale(y)
-		.orient("left");
-
-	var line = d3.svg.line()
-		.x(function(d) { return x(d.date); })
-		.y(function(d) { return y(d.close); });
-	
-	var svg = d3.select("#progress_section div.s2").append("svg")
-		.attr("width", width + margin.left + margin.right)
-	  .attr("height", height + margin.top + margin.bottom)
-	  .append("g")
-	  .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-	
-	var data = [
-		{ date:"1-May-12", close:13 },
-		{ date:"2-May-12", close:34 },
-		{ date:"3-May-12", close:23 },
-		{ date:"4-May-12", close:56 },
-		{ date:"5-May-12", close:12 },
-		{ date:"6-May-12", close:15 },
-		{ date:"7-May-12", close:35 },
-		{ date:"8-May-12", close:21 },
-		{ date:"9-May-12", close:15 },
-		{ date:"10-May-12", close:37 }
-	]
-	
-	data.forEach(function(d) {
-		d.date = parseDate(d.date);
-		d.close = +d.close;
-	});
-
-	x.domain(d3.extent(data, function(d) { return d.date; }));
-  y.domain(d3.extent(data, function(d) { return d.close; }));
-
-  svg.append("g")
-  	.attr("class", "x axis")
- 		.attr("transform", "translate(0," + height + ")")
-  	.call(xAxis);
-
-  svg.append("g")
-  	.attr("class", "y axis")
-  	.call(yAxis);
-
-  svg.append("path")
-  	.datum(data)
-  	.attr("class", "line")
-  	.attr("d", line);
 </script>
