--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -21,6 +21,7 @@
 	<script type="text/javascript" src="/js/underscore-min.js"></script>
 	<script type="text/javascript" src="/js/backbone-min.js"></script>
 	<script type="text/javascript" src="/js/jquery.easing.js"></script>
+	<script type="text/javascript" src="/js/date.format.js"></script>
 	<script type="text/javascript" src="/js/actions.js"></script>
 	<script type="text/javascript" src="/js/powerup.js"></script>
   <% if (typeof currentUser !== 'undefined') { %>
