--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,6 +6,7 @@
 		<a href="/getting-started">Getting Started</a>
 		<a href="/tos">TOS</a>
 		<a href="/contact">Contact</a>
+		<a href="/pricing">Pricing</a>
 		<a href="/switchboard">Switchboard</a>
 	</div>
 </body>
