--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -71,6 +71,11 @@
 			<% } %>
 		</div>
 	</div>
+	
+	<% if(typeof(stylesheets) !== 'undefined' && stylesheets[0] == 'page' && currentUser && (currentUser.isPremium || (currentUser.promo && currentUser.promo.zed))){ %>
+		<img src="/img/stamps/poweruser_2013.png" style="opacity:.6;position:absolute;right:0;bottom:40px;" />
+	<% } %>
+	
 	<div id="page">
 	  <% if (typeof flash !== 'undefined') { %>
 	    <% if (typeof flash !== 'undefined') { %>
