--- a/views/page/company-names.ejs
+++ b/views/page/company-names.ejs
@@ -187,13 +187,13 @@
 	
 	<div class="get_started">
 		<p>Be Legendary</p>
-		<a href="/getting-started/6">START PRACTICING</a>
+		<a href="/getting-started/6">START BUILDING</a>
 	</div>
 </div>
 
 
 <div class="content">
-	<h2>CALL DIBS ON YOUR BAND NAME</h2>
+	<h2>CALL DIBS ON YOUR COMPANY NAME</h2>
 	<div id="disqus_thread"></div>
   <script type="text/javascript">
       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
