button, button. who's got the button...

--- a/views/page/company-names.ejs
+++ b/views/page/company-names.ejs
@@ -178,7 +178,7 @@
 </div>
 <h1 class="heading">
 	Company Name Generator
-	<button class="company button" type="button">NEW NAME</button>
+	<button class="random company" type="button">NEW NAME</button>
 </h1>
 
 <div id="band_frame">
@@ -211,15 +211,19 @@
   
 	<div class="gap"></div>
 
-	<h2>Bonus tips for choosing the perfect band name</h2>
+	<h2>Bonus tips for choosing the perfect company name</h2>
 	<ol class="tips">
-		<li><strong>Choose words that evoke strong visual imagery.</strong> If your band name paints an immediate image in someones brain, they'll be much more likely to remember you.</li>
-		<li><strong>Combine words in unexpected ways.</strong> This is another great tactic to get your band embedded in your fans memory. When unusual things are mixed, it causes the brain to evaluate the combination. <a href="http://universosportinguista.blogspot.com/2009/09/surrealism-makes-you-smarter.html" target="_blank">[study on surrealism]</a></li>
-		<li><strong>Be original.</strong> Don't be one of those bands that tries to make a name by hooking onto the identity of an existing famous band.</li>
-		<li><strong>Drugs aren't the path to creativity.</strong> Anyone can be creative without the use of chemical stimulants. Expose yourself to new ideas, people and environments. Then be sure to continually write down your thoughts.</li>
-		<li><strong>Be approachable.</strong> Think about your fans and how to connect with them. Let them help you create and explore. Maybe this line of thinking helps you with a band name but hopefully it's part of your overall messaging.</li>
+		<li><strong>Choose a name that’s easily remembered.</strong> You should be able to explain in a couple of seconds how to spell your company name. A name that’s phonetic (spelled like it’s pronounced) is preferable.</li>
+
+    <li><strong>Names that sound like familiar words are best.</strong> If you can associate your company’s name with a familiar word, then your abstract name becomes much easier to recall.</li>
+
+    <li><strong>Look for names with an available domain.</strong> It’s commonly said but worth reiterating. If you have the .com, it lends a lot of credibility to your company. It’s not a deal-breaker, but it’s a bonus if you have your-name.com (or whatever your favorite TLD is).</li>
+
+    <li><strong>Fit the tone of your company.</strong> Your name says a lot about you. Pick a name that’s generally aligned with your company’s target market, and doesn’t sound too playful, or foreboding, depending on who you are.</li>
+    
 		<li><strong>Have fun with it.</strong> When you take things too seriously it's hard to be open to so many great possibilities.</li>
-		<p>If this band name randomizer was helpful at all in your naming process please send us an email. We'd love to hear your story! <a href="mailto:tips@powerup.io">tips@powerup.io</a></p>
+		
+		<p>If this company name randomizer was helpful at all in your naming process please send us an email. We'd love to hear your story! <a href="mailto:tips@powerup.io">tips@powerup.io</a></p>
 	</ol>
 </div>
 
@@ -242,7 +246,7 @@
 		  // Browser supports HTML5 DnD.
 		}
 
-    $('.heading .company.button').click(function(){
+    $('.heading button.random.company').click(function(){
 			generate_name();
     });
 
