--- a/views/page/company-names.ejs
+++ b/views/page/company-names.ejs
@@ -191,7 +191,7 @@
 	
 	<div class="get_started">
 		<p>Be Legendary</p>
-		<a href="/getting-started/6">START BUILDING</a>
+		<a href="/getting-started/6">GET STARTED</a>
 	</div>
 </div>
 
