--- a/views/page/band-names.ejs
+++ b/views/page/band-names.ejs
@@ -29,6 +29,7 @@
 	
 	button.random {
 		background: rgba(255,255,255,.5);
+		color:#444;
 		padding: 10px;
 		position: relative;
 		top: -2px;
@@ -172,6 +173,12 @@
 	.tips li {
 		padding-bottom:10px;
 	}
+	
+	a.sub {
+		font-weight:bold;
+		position:relative;
+		top:-15px;
+	}
 </style>
 
 
@@ -181,8 +188,9 @@
 </div>
 <h1 class="heading">
 	Band Name Generator
-	<button class="random" type="button"><img src="/img/icons/random.png"></button>
+	<button class="random" type="button">NEXT <img src="/img/icons/random.png"></button>
 </h1>
+<a class="sub" href="/generator/rock_band_names">Rock Band Names</a>
 
 
 <ul id="sortable">
