--- a/views/page/rock-band-names.ejs
+++ b/views/page/rock-band-names.ejs
@@ -29,6 +29,7 @@
 	
 	button.random {
 		background: rgba(255,255,255,.5);
+		color:#444;
 		padding: 10px;
 		position: relative;
 		top: -2px;
@@ -187,7 +188,7 @@
 </div>
 <h1 class="heading">
 	Rock Band Name Generator
-	<button class="random" type="button"><img src="/img/icons/random.png"></button>
+	<button class="random" type="button">NEXT <img src="/img/icons/random.png"></button>
 </h1>
 <a class="sub" href="/generator/band_names">Original Band Name Generator</a>
 
@@ -313,8 +314,8 @@
 	}
 	
 	var sliders = [
-		["ASS",""],
-		["HAPPY",""],
-		["NEWS","SPAM"]
+		["JIMMY","THE","GARAGE","GARBAGE","FIRE","BLACK","BLUE","HARD","AQUA","BIG","BAD","FAST","GREEN","GUN","SEVEN","SMASH","SLOPPY","MARY","CAPTAIN","MIGHTY","DAFT","DEF","MEGA","SUPER","STORM","JELLY","SMASHING","PAINT","MUSTACHE","CEREAL","DISCO","WET","ODD","APPLE","JUMP","LOUD","THREE","REAL"],
+		["ASPHALT","","VOODOO","","FUNK","","SPEED","","SOUND","","TIME","","SPACE","","SUPPLY","","FLAG","","MELON","","IRON","","DOG","","MICE","","VELVET","","FED","","SHOE","","POWER","","LANTERN","","SPACESHIP","","BUCKET","","CASKET","","BEER","","SAFETY",""],
+		["MAIDEN","DAY","HEROES","MONKEYS","ROBOTS","DADDY","BOYS","GIRLS","CROWS","FIGHTERS","SONS","PYROS","STONES","MANIACS","GIANTS","NIGHT","SNAKE","ZOMBIE","ROCKETS","PIGS","ARMY","LOGIC","BEINGS","PILOTS","BOY","BAND","BAKERY","REVIVAL","KILLERS","DRAGONS","SUNDAY","WEEKEND","UNDERGROUND","BANDITS","CREW","WRECKAGE","FACE"]
 	]
 </script>
