rock band names

--- a/views/page/rock-band-names.ejs
+++ b/views/page/rock-band-names.ejs
@@ -243,15 +243,9 @@
   
 	<div class="gap"></div>
 
-	<h2>Bonus tips for choosing the perfect band name</h2>
+	<h2>Bonus tips for choosing the perfect rock band name</h2>
 	<ol class="tips">
-		<li><strong>Choose words that evoke strong visual imagery.</strong> If your band name paints an immediate image in someones brain, they'll be much more likely to remember you.</li>
-		<li><strong>Combine words in unexpected ways.</strong> This is another great tactic to get your band embedded in your fans memory. When unusual things are mixed, it causes the brain to evaluate the combination. <a href="http://universosportinguista.blogspot.com/2009/09/surrealism-makes-you-smarter.html" target="_blank">[study on surrealism]</a></li>
-		<li><strong>Be original.</strong> Don't be one of those bands that tries to make a name by hooking onto the identity of an existing famous band.</li>
-		<li><strong>Drugs aren't the path to creativity.</strong> Anyone can be creative without the use of chemical stimulants. Expose yourself to new ideas, people and environments. Then be sure to continually write down your thoughts.</li>
-		<li><strong>Be approachable.</strong> Think about your fans and how to connect with them. Let them help you create and explore. Maybe this line of thinking helps you with a band name but hopefully it's part of your overall messaging.</li>
-		<li><strong>Have fun with it.</strong> When you take things too seriously it's hard to be open to so many great possibilities.</li>
-		<p>If this band name randomizer was helpful at all in your naming process please send us an email. We'd love to hear your story! <a href="mailto:tips@powerup.io">tips@powerup.io</a></p>
+		
 	</ol>
 </div>
 
@@ -314,8 +308,8 @@
 	}
 	
 	var sliders = [
-		["JIMMY","THE","GARAGE","GARBAGE","FIRE","BLACK","BLUE","HARD","AQUA","BIG","BAD","FAST","GREEN","GUN","SEVEN","SMASH","SLOPPY","MARY","CAPTAIN","MIGHTY","DAFT","DEF","MEGA","SUPER","STORM","JELLY","SMASHING","PAINT","MUSTACHE","CEREAL","DISCO","WET","ODD","APPLE","JUMP","LOUD","THREE","REAL"],
-		["ASPHALT","","VOODOO","","FUNK","","SPEED","","SOUND","","TIME","","SPACE","","SUPPLY","","FLAG","","MELON","","IRON","","DOG","","MICE","","VELVET","","FED","","SHOE","","POWER","","LANTERN","","SPACESHIP","","BUCKET","","CASKET","","BEER","","SAFETY",""],
-		["MAIDEN","DAY","HEROES","MONKEYS","ROBOTS","DADDY","BOYS","GIRLS","CROWS","FIGHTERS","SONS","PYROS","STONES","MANIACS","GIANTS","NIGHT","SNAKE","ZOMBIE","ROCKETS","PIGS","ARMY","LOGIC","BEINGS","PILOTS","BOY","BAND","BAKERY","REVIVAL","KILLERS","DRAGONS","SUNDAY","WEEKEND","UNDERGROUND","BANDITS","CREW","WRECKAGE","FACE"]
+		["JIMMY","THE","GARAGE","GARBAGE","FIRE","BLACK","BLUE","HARD","AQUA","BIG","BAD","FAST","GREEN","GUN","SEVEN","SMASH","SLOPPY","MARY","CAPTAIN","MIGHTY","DAFT","DEF","MEGA","SUPER","STORM","JELLY","SMASHING","PAINT","MUSTACHE","CEREAL","DISCO","WET","ODD","APPLE","JUMP","LOUD","THREE","REAL","ICE","HAMMER","MC","COLD"],
+		["ASPHALT","","VOODOO","","FUNK","","SPEED","","SOUND","","TIME","","SPACE","","SUPPLY","","FLAG","","MELON","","IRON","","DOG","","MICE","","VELVET","","FED","","SHOE","","POWER","","LANTERN","","SPACESHIP","","BUCKET","","CASKET","","BEER","","SAFETY","","SEED","","HAIRY","","ROCK","","HEART","","BRAIN",""],
+		["MAIDEN","DAY","HEROES","MONKEYS","ROBOTS","DADDY","BOYS","GIRLS","CROWS","FIGHTERS","SONS","PYROS","STONES","MANIACS","GIANTS","NIGHT","SNAKE","ZOMBIE","ROCKETS","PIGS","ARMY","LOGIC","BEINGS","PILOTS","BOY","BAND","BAKERY","REVIVAL","KILLERS","DRAGONS","SUNDAY","WEEKEND","UNDERGROUND","BANDITS","CREW","WRECKAGE","FACE","REBELS","SOUL"]
 	]
 </script>
