more band names

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -73,7 +73,7 @@
 	</div>
 	
 	<% if(typeof(stylesheets) !== 'undefined' && stylesheets[0] == 'page' && currentUser && (currentUser.isPremium || (currentUser.promo && currentUser.promo.zed))){ %>
-		<img src="/img/stamps/poweruser_2013.png" style="position:absolute;right:0;bottom:40px;" />
+		<img src="/img/stamps/poweruser_2013.png" style="position:fixed;right:0;bottom:40px;" />
 	<% } %>
 	
 	<div id="page">
