--- a/views/page/rock-band-names.ejs
+++ b/views/page/rock-band-names.ejs
@@ -245,12 +245,16 @@
 
 	<h2>Bonus tips for choosing the perfect rock band name</h2>
 	<ol class="tips">
-		<li><strong>Choose words that evoke strong visual imagery.</strong> If your band name paints an immediate image in someones brain, they'll be much more likely to remember you.</li>
+	  <li><strong>Match your band's image.</strong> If you're a more experimental or post-rock band, try a more abstract, imaginative, or creative name. On the other hand, if you're a hardcore, heavy metal band, you should choose a name that conveys that brutal image.</li>
+		
+		<li><strong>Use vivid imagery.</strong> A name that speaks to your fans, and creates a vivid image in their head, is much more likely to stick in their memory.</li>
+		
 		<li><strong>Combine words in unexpected ways.</strong> This is another great tactic to get your band embedded in your fans memory. When unusual things are mixed, it causes the brain to evaluate the combination. <a href="http://universosportinguista.blogspot.com/2009/09/surrealism-makes-you-smarter.html" target="_blank">[study on surrealism]</a></li>
-		<li><strong>Be original.</strong> Don't be one of those bands that tries to make a name by hooking onto the identity of an existing famous band.</li>
-		<li><strong>Drugs aren't the path to creativity.</strong> Anyone can be creative without the use of chemical stimulants. Expose yourself to new ideas, people and environments. Then be sure to continually write down your thoughts.</li>
-		<li><strong>Be approachable.</strong> Think about your fans and how to connect with them. Let them help you create and explore. Maybe this line of thinking helps you with a band name but hopefully it's part of your overall messaging.</li>
-		<li><strong>Have fun with it.</strong> When you take things too seriously it's hard to be open to so many great possibilities.</li>
+		
+		<li><strong>Be original.</strong> Don't be tempted to latch onto naming trends, or copy parts of someone else's name outright. Your name is a representation of you -- own it.</li>
+		
+		<li><strong>Rock out.</strong> Don't let your naming decision take precedence over the music. Rock out, and the name will come.</li>
+		
 		<p>If this band name randomizer was helpful at all in your naming process please send us an email. We'd love to hear your story! <a href="mailto:tips@powerup.io">tips@powerup.io</a></p>
 	</ol>
 </div>
