--- a/views/page/rock-band-names.ejs
+++ b/views/page/rock-band-names.ejs
@@ -219,7 +219,7 @@
 	
 	<div class="get_started">
 		<p>Be Legendary</p>
-		<a href="/getting-started/6">START PRACTICING</a>
+		<a href="/band_signup">START PRACTICING</a>
 	</div>
 </div>
 
@@ -318,8 +318,8 @@
 	}
 	
 	var sliders = [
-		["JIMMY","THE","GARAGE","GARBAGE","FIRE","BLACK","BLUE","HARD","AQUA","BIG","BAD","FAST","GREEN","GUN","SEVEN","SMASH","SLOPPY","MARY","CAPTAIN","MIGHTY","DAFT","DEF","MEGA","SUPER","STORM","JELLY","SMASHING","PAINT","MUSTACHE","CEREAL","DISCO","WET","ODD","APPLE","JUMP","LOUD","THREE","REAL","ICE","HAMMER","MC","COLD","ALIEN"],
+		["JIMMY","THE","GARAGE","GARBAGE","FIRE","RED","BLACK","BLUE","HARD","AQUA","BIG","BAD","FAST","GREEN","GUN","SEVEN","SMASH","SLOPPY","MARY","CAPTAIN","MIGHTY","DAFT","DEF","MEGA","SUPER","STORM","JELLY","SMASHING","PAINT","MUSTACHE","CEREAL","DISCO","WET","ODD","APPLE","JUMP","LOUD","THREE","REAL","ICE","HAMMER","MC","COLD","ALIEN"],
 		["ASPHALT","","VOODOO","","FUNK","","SPEED","","SOUND","","TIME","","SPACE","","SUPPLY","","FLAG","","MELON","","IRON","","DOG","","MICE","","VELVET","","FED","","SHOE","","POWER","","LANTERN","","SPACESHIP","","BUCKET","","CASKET","","BEER","","SAFETY","","SEED","","HAIRY","","ROCK","","HEART","","BRAIN","","BOX","","ANT",""],
-		["MAIDEN","DAY","HEROES","MONKEYS","ROBOTS","DADDY","BOYS","GIRLS","CROWS","FIGHTERS","SONS","PYROS","STONES","MANIACS","GIANTS","NIGHT","SNAKE","ZOMBIE","ROCKETS","PIGS","ARMY","LOGIC","BEINGS","PILOTS","BOY","BAND","BAKERY","REVIVAL","KILLERS","DRAGONS","SUNDAY","WEEKEND","UNDERGROUND","BANDITS","CREW","WRECKAGE","FACE","REBELS","SOUL","PUMPKINS","FARM"]
+		["MAIDEN","DAY","HEROES","MONKEYS","ROBOTS","DADDY","BOYS","GIRLS","CROWS","FIGHTERS","SONS","PYROS","STONES","MANIACS","GIANTS","NIGHT","SNAKE","ZOMBIE","ROCKETS","PIGS","ARMY","LOGIC","BEINGS","PILOTS","BOY","BAND","BAKERY","REVIVAL","KILLERS","DRAGONS","SUNDAY","WEEKEND","UNDERGROUND","BANDITS","CREW","WRECKAGE","FACE","REBELS","SOUL","PUMPKINS","FARM","REVOLVERS"]
 	]
 </script>
