--- a/views/page/band-signup.ejs
+++ b/views/page/band-signup.ejs
@@ -15,9 +15,7 @@
 <% include ../partials/footer.ejs %>
 
 <script>
-  $('input.goal').val('Start a Band');
-	$('textarea.about').val('Colors are used to represent how far you&#39;ve gone in a given day. For the first 3 miles, click the black button. For miles 4-10 choose the blue button. The red button is for miles 11+.');
-  $('input.work_unit:eq(0)').val('Practice 10 Mins');
+  $('input.goal').val('Become Famous');
   $('input.work_unit:eq(1)').val('Write Lyrics 10 Mins');
   $('input.work_unit:eq(2)').val('Promote 10 Mins');
 </script>
