--- a/views/page/band-signup.ejs
+++ b/views/page/band-signup.ejs
@@ -16,6 +16,7 @@
 
 <script>
   $('input.goal').val('Become Famous');
+  $('input.work_unit:eq(0)').val('Practice 10 Mins');
   $('input.work_unit:eq(1)').val('Write Lyrics 10 Mins');
   $('input.work_unit:eq(2)').val('Promote 10 Mins');
 </script>
